--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "convert",
     "time"
   ],
-  "author": "Bojan Mazej <bojan.mazej@gmail.com>",
-  "license": "ISC",
+  "author": {
+    "name": "Bojan Mazej",
+    "email": "bojan.mazej@gmail.com"
+  },
+  "license": "MIT",
   "scripts": {
     "test": "jest"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bojangles-m/seconds-formater.git"
+    "url": "https://github.com/bojangles-m/seconds-formater"
   },
   "bugs": {
     "url": "https://github.com/bojangles-m/seconds-formater/issues"
