--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   },
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "dev": "npx ts-node -T src/index.ts",
+    "build": "npx tsc",
+    "clear": "rm -rf ./dist"
   },
   "repository": {
     "type": "git",
@@ -26,6 +29,9 @@
   },
   "homepage": "https://github.com/bojangles-m/seconds-formater#readme",
   "devDependencies": {
-    "jest": "^28.1.3"
+    "@types/node": "^18.6.1",
+    "jest": "^28.1.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   }
 }
