--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "test": "jest",
     "dev": "npx ts-node -T src/index.ts",
-    "build": "npx tsc",
+    "build": "npx tsc --project tsconfig.build.json",
     "clear": "rm -rf ./dist"
   },
   "repository": {
@@ -29,8 +29,10 @@
   },
   "homepage": "https://github.com/bojangles-m/seconds-formater#readme",
   "devDependencies": {
+    "@types/jest": "^28.1.6",
     "@types/node": "^18.6.1",
     "jest": "^28.1.3",
+    "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
