--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "seconds-formater",
     "version": "1.2.1",
     "description": "Representing seconds in pretty time format",
-    "main": "dist/index.js",
-    "types": "./dist/index.d.ts",
+    "main": "lib/index.js",
+    "types": "./lib/index.d.ts",
     "files": [
-        "dist/**"
+        "lib/**"
     ],
     "keywords": [
         "seconds",
