--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "build:project": "npx tsc --project tsconfig.build.json",
         "clear": "rm -rf ./dist & rm *.tgz",
         "compile": "npm run clear & npm run compile:project",
-        "compile:project": "tsc --project tsconfig.compile.json",
+        "compile:project": "npx tsc --project tsconfig.compile.json",
         "dev": "npx ts-node -T src/index.ts",
         "pack": "npm pack",
         "test": "jest"
@@ -37,10 +37,10 @@
     },
     "homepage": "https://github.com/bojangles-m/seconds-formater#readme",
     "devDependencies": {
-        "@types/jest": "^28.1.6",
-        "@types/node": "^18.6.1",
+        "@types/jest": "^28.1.7",
+        "@types/node": "^18.7.9",
         "jest": "^28.1.3",
-        "ts-jest": "^28.0.7",
+        "ts-jest": "^28.0.8",
         "ts-node": "^10.9.1",
         "typescript": "^4.7.4"
     }
