--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
     "name": "seconds-formater",
     "version": "1.2.1",
     "description": "Representing seconds in pretty time format",
-    "main": "./dist/index.js",
-    "types": "./dist/index.d.ts",
+    "main": "dist/index.umd.js",
+    "unpkg": "dist/index.umd.js",
+    "module": "dist/index.es.js",
+    "types": "dist/index.d.ts",
     "files": [
         "dist/**"
     ],
@@ -19,14 +21,11 @@
     },
     "license": "MIT",
     "scripts": {
-        "build": "npm run clear & npm run build:project",
-        "build:project": "npx tsc --project tsconfig.build.json",
-        "clear": "rm -rf ./dist & rm *.tgz",
-        "compile": "npm run clear & npm run compile:project",
-        "compile:project": "npx tsc --project tsconfig.compile.json",
+        "build": "pnpm clear & vite build",
+        "clear": "rimraf ./dist *.tgz",
         "dev": "npx ts-node -T src/index.ts",
-        "pack": "npm pack",
-        "test": "jest"
+        "test": "jest",
+        "typecheck": "tsc --noEmit"
     },
     "repository": {
         "type": "git",
@@ -40,8 +39,11 @@
         "@types/jest": "^28.1.7",
         "@types/node": "^18.7.9",
         "jest": "^28.1.3",
+        "rimraf": "^3.0.2",
         "ts-jest": "^28.0.8",
         "ts-node": "^10.9.1",
-        "typescript": "^4.7.4"
+        "typescript": "^4.7.4",
+        "vite": "^3.0.9",
+        "vite-plugin-dts": "^1.4.1"
     }
 }
